[package]
name = "gnal_tsur"
description = ".esrever ni edoc etirW"
version = "0.1.0"
edition = "2021"
authors = ["Kyza"]
license = "MIT"
repository = "https://github.com/Kyza/gnal_tsur"
readme = "./README.md"
keywords = ["macro", "reverse", "fun", "backward", "proc_macro"]
categories = ["development-tools::build-utils"]

[dependencies]
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.56"
quote = "1.0.27"
syn = { version = "2.0.15", features = ["full", "extra-traits"] }

[lib]
proc-macro = true
